k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: recipe-app
  labels:
    name: recipe-app
